Lab3/src/main/java/gen/JavaProgramParser.java
// Generated from java-escape by ANTLR 4.11.1
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JavaProgramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, KEYWORD_package=11, KEYWORD_import=12, KEYWORD_switch=13, KEYWORD_case=14, 
		KEYWORD_default=15, KEYWORD_STRUCTURE=16, KEYWORD_STRUCTURE_CONTINUE=17, 
		KEYWORD=18, STRING=19, NUMBER=20, ID=21, AngleL=22, AngleR=23, Question=24, 
		Colon=25, Star=26, UNARY_OPERATOR=27, OPERATOR=28, Comma=29, WS=30;
	public static final int
		RULE_program = 0, RULE_package = 1, RULE_imports = 2, RULE_imprt = 3, 
		RULE_innerStructureSeq = 4, RULE_innerStructure = 5, RULE_innerDeclare = 6, 
		RULE_declareBegin = 7, RULE_declarePrefix = 8, RULE_declareInScopeBody = 9, 
		RULE_declareEnd = 10, RULE_innerBody = 11, RULE_innerCode = 12, RULE_line = 13, 
		RULE_keyStructure = 14, RULE_keyDeclare = 15, RULE_keyContinueDeclare = 16, 
		RULE_keyDeclareScope = 17, RULE_keyDeclareInScope = 18, RULE_keyLineEnd = 19, 
		RULE_switchStructure = 20, RULE_switchDeclare = 21, RULE_switchBody = 22, 
		RULE_switchCode = 23, RULE_case = 24, RULE_default = 25, RULE_funcDeclareArgs = 26, 
		RULE_funcDeclareArg = 27, RULE_argTypeToken = 28, RULE_valueDeclare = 29, 
		RULE_value = 30, RULE_valueUnary = 31, RULE_valueUnaryKeyWord = 32, RULE_valueUnaryGet = 33, 
		RULE_valueUnaryMain = 34, RULE_funcToken = 35, RULE_funcCallArgs = 36, 
		RULE_typeToken = 37, RULE_varToken = 38, RULE_generic = 39, RULE_genericIn = 40, 
		RULE_keyWordAndTokens = 41, RULE_typeTokensComma = 42, RULE_keyWord = 43, 
		RULE_unaryOperator = 44, RULE_operator = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "package", "imports", "imprt", "innerStructureSeq", "innerStructure", 
			"innerDeclare", "declareBegin", "declarePrefix", "declareInScopeBody", 
			"declareEnd", "innerBody", "innerCode", "line", "keyStructure", "keyDeclare", 
			"keyContinueDeclare", "keyDeclareScope", "keyDeclareInScope", "keyLineEnd", 
			"switchStructure", "switchDeclare", "switchBody", "switchCode", "case", 
			"default", "funcDeclareArgs", "funcDeclareArg", "argTypeToken", "valueDeclare", 
			"value", "valueUnary", "valueUnaryKeyWord", "valueUnaryGet", "valueUnaryMain", 
			"funcToken", "funcCallArgs", "typeToken", "varToken", "generic", "genericIn", 
			"keyWordAndTokens", "typeTokensComma", "keyWord", "unaryOperator", "operator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'.'", "'('", "')'", "'{'", "'}'", "'while'", "'...'", "'['", 
			"']'", "'package'", "'import'", "'switch'", "'case'", "'default'", null, 
			null, null, null, null, null, "'<'", "'>'", "'?'", "':'", "'*'", null, 
			null, "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "KEYWORD_package", 
			"KEYWORD_import", "KEYWORD_switch", "KEYWORD_case", "KEYWORD_default", 
			"KEYWORD_STRUCTURE", "KEYWORD_STRUCTURE_CONTINUE", "KEYWORD", "STRING", 
			"NUMBER", "ID", "AngleL", "AngleR", "Question", "Colon", "Star", "UNARY_OPERATOR", 
			"OPERATOR", "Comma", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaProgramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public InnerStructureSeqContext innerStructureSeq() {
			return getRuleContext(InnerStructureSeqContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JavaProgramParser.EOF, 0); }
		public PackageContext package_() {
			return getRuleContext(PackageContext.class,0);
		}
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KEYWORD_package) {
				{
				setState(92);
				package_();
				}
			}

			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KEYWORD_import) {
				{
				setState(95);
				imports();
				}
			}

			setState(98);
			innerStructureSeq();
			setState(99);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageContext extends ParserRuleContext {
		public TerminalNode KEYWORD_package() { return getToken(JavaProgramParser.KEYWORD_package, 0); }
		public TypeTokenContext typeToken() {
			return getRuleContext(TypeTokenContext.class,0);
		}
		public PackageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterPackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitPackage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitPackage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageContext package_() throws RecognitionException {
		PackageContext _localctx = new PackageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_package);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(KEYWORD_package);
			setState(102);
			typeToken();
			setState(103);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportsContext extends ParserRuleContext {
		public List<ImprtContext> imprt() {
			return getRuleContexts(ImprtContext.class);
		}
		public ImprtContext imprt(int i) {
			return getRuleContext(ImprtContext.class,i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(105);
				imprt();
				}
				}
				setState(108); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KEYWORD_import );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImprtContext extends ParserRuleContext {
		public TerminalNode KEYWORD_import() { return getToken(JavaProgramParser.KEYWORD_import, 0); }
		public TypeTokenContext typeToken() {
			return getRuleContext(TypeTokenContext.class,0);
		}
		public TerminalNode Star() { return getToken(JavaProgramParser.Star, 0); }
		public ImprtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterImprt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitImprt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitImprt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprtContext imprt() throws RecognitionException {
		ImprtContext _localctx = new ImprtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_imprt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(KEYWORD_import);
			setState(111);
			typeToken();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(112);
				match(T__1);
				setState(113);
				match(Star);
				}
			}

			setState(116);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InnerStructureSeqContext extends ParserRuleContext {
		public List<InnerStructureContext> innerStructure() {
			return getRuleContexts(InnerStructureContext.class);
		}
		public InnerStructureContext innerStructure(int i) {
			return getRuleContext(InnerStructureContext.class,i);
		}
		public InnerStructureSeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_innerStructureSeq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterInnerStructureSeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitInnerStructureSeq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitInnerStructureSeq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InnerStructureSeqContext innerStructureSeq() throws RecognitionException {
		InnerStructureSeqContext _localctx = new InnerStructureSeqContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_innerStructureSeq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(118);
				innerStructure();
				}
				}
				setState(121); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 6553600L) != 0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InnerStructureContext extends ParserRuleContext {
		public InnerDeclareContext innerDeclare() {
			return getRuleContext(InnerDeclareContext.class,0);
		}
		public InnerBodyContext innerBody() {
			return getRuleContext(InnerBodyContext.class,0);
		}
		public InnerStructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_innerStructure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterInnerStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitInnerStructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitInnerStructure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InnerStructureContext innerStructure() throws RecognitionException {
		InnerStructureContext _localctx = new InnerStructureContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_innerStructure);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			innerDeclare();
			setState(124);
			innerBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InnerDeclareContext extends ParserRuleContext {
		public DeclareBeginContext declareBegin() {
			return getRuleContext(DeclareBeginContext.class,0);
		}
		public DeclareEndContext declareEnd() {
			return getRuleContext(DeclareEndContext.class,0);
		}
		public InnerDeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_innerDeclare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterInnerDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitInnerDeclare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitInnerDeclare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InnerDeclareContext innerDeclare() throws RecognitionException {
		InnerDeclareContext _localctx = new InnerDeclareContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_innerDeclare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			declareBegin();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KEYWORD) {
				{
				setState(127);
				declareEnd();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclareBeginContext extends ParserRuleContext {
		public DeclarePrefixContext declarePrefix() {
			return getRuleContext(DeclarePrefixContext.class,0);
		}
		public DeclareInScopeBodyContext declareInScopeBody() {
			return getRuleContext(DeclareInScopeBodyContext.class,0);
		}
		public DeclareBeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareBegin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterDeclareBegin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitDeclareBegin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitDeclareBegin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareBeginContext declareBegin() throws RecognitionException {
		DeclareBeginContext _localctx = new DeclareBeginContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declareBegin);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			declarePrefix();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(131);
				match(T__2);
				setState(132);
				declareInScopeBody();
				setState(133);
				match(T__3);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarePrefixContext extends ParserRuleContext {
		public List<KeyWordContext> keyWord() {
			return getRuleContexts(KeyWordContext.class);
		}
		public KeyWordContext keyWord(int i) {
			return getRuleContext(KeyWordContext.class,i);
		}
		public List<TypeTokenContext> typeToken() {
			return getRuleContexts(TypeTokenContext.class);
		}
		public TypeTokenContext typeToken(int i) {
			return getRuleContext(TypeTokenContext.class,i);
		}
		public List<GenericContext> generic() {
			return getRuleContexts(GenericContext.class);
		}
		public GenericContext generic(int i) {
			return getRuleContext(GenericContext.class,i);
		}
		public DeclarePrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarePrefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterDeclarePrefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitDeclarePrefix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitDeclarePrefix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarePrefixContext declarePrefix() throws RecognitionException {
		DeclarePrefixContext _localctx = new DeclarePrefixContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declarePrefix);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(140); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(140);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case KEYWORD:
						{
						setState(137);
						keyWord();
						}
						break;
					case ID:
						{
						setState(138);
						typeToken();
						}
						break;
					case AngleL:
						{
						setState(139);
						generic();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(142); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclareInScopeBodyContext extends ParserRuleContext {
		public FuncDeclareArgsContext funcDeclareArgs() {
			return getRuleContext(FuncDeclareArgsContext.class,0);
		}
		public DeclareInScopeBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareInScopeBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterDeclareInScopeBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitDeclareInScopeBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitDeclareInScopeBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareInScopeBodyContext declareInScopeBody() throws RecognitionException {
		DeclareInScopeBodyContext _localctx = new DeclareInScopeBodyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declareInScopeBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			funcDeclareArgs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclareEndContext extends ParserRuleContext {
		public List<KeyWordAndTokensContext> keyWordAndTokens() {
			return getRuleContexts(KeyWordAndTokensContext.class);
		}
		public KeyWordAndTokensContext keyWordAndTokens(int i) {
			return getRuleContext(KeyWordAndTokensContext.class,i);
		}
		public DeclareEndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareEnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterDeclareEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitDeclareEnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitDeclareEnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareEndContext declareEnd() throws RecognitionException {
		DeclareEndContext _localctx = new DeclareEndContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_declareEnd);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(146);
				keyWordAndTokens();
				}
				}
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KEYWORD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InnerBodyContext extends ParserRuleContext {
		public InnerCodeContext innerCode() {
			return getRuleContext(InnerCodeContext.class,0);
		}
		public InnerBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_innerBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterInnerBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitInnerBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitInnerBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InnerBodyContext innerBody() throws RecognitionException {
		InnerBodyContext _localctx = new InnerBodyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_innerBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(T__4);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 536682506L) != 0) {
				{
				setState(152);
				innerCode();
				}
			}

			setState(155);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
